k8s/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: swagger-ui-vs
  namespace: nmost
spec:
  hosts:
  - "nmost.site"
  gateways:
  - grpc-gateway
  http:
  - match:
    - uri:
        prefix: /swagger
    route:
    - destination:
        host: swagger-ui-service
        port:
          number: 80
